deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo-1
spec:
  selector:
    matchLabels:
      app: app-demo-1
  replicas: 1
  template:
    metadata:
      labels:
        app: app-demo-1
    spec:
      containers:
        - name: app-demo-1
          image: jeongminyeo/spring-boot-kubernetes-demo-service1
          ports:
            - containerPort: 8080
