deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo-2
spec:
  selector:
    matchLabels:
      app: app-demo-2
  replicas: 1
  template:
    metadata:
      labels:
        app: app-demo-2
    spec:
      containers:
        - name: app-demo-2
          image: jeongminyeo/spring-boot-kubernetes-demo-service2
          ports:
            - containerPort: 8080
