service2.yaml
apiVersion: v1
kind: Service
metadata:
  name:  app-demo-2
spec:
  selector:
    app:  app-demo-2
  type:  NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
